# ndk-capi-hello-world

./: .gitmodules  CMakeLists.txt  README.md
capi-hello-world/: settings.gradle
capi-hello-world/app/: build.gradle
capi-hello-world/app/src/androidTest/java/com/example/capihelloworld/: ExampleInstrumentedTest.java
capi-hello-world/app/src/main/: AndroidManifest.xml
capi-hello-world/app/src/main/cpp/: CMakeLists.txt  MainActivityJNI.cpp  ServiceCommonApiCltJNI.cpp  ServiceCommonApiSrvJNI.cpp
capi-hello-world/app/src/main/java/com/example/capihelloworld/: MainActivity.java  ServiceCommonApiClt.java  ServiceCommonApiSrv.java
capi-hello-world/app/src/main/res/values/: strings.xml
capi-hello-world/app/src/test/java/com/example/capihelloworld/: ExampleUnitTest.java
capi-hello-world/gradle/wrapper/: gradle-wrapper.properties
cmake/: FindCommonAPI-SomeIP.cmake  FindCommonAPI.cmake  Findvsomeip3.cmake
patches/: apply-patches.sh  capicxx-core-runtime.patch  capicxx-someip-runtime.patch
